# montecarlo-benchmarking-engine

./: .dockerignore  .env.sample  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  benchmark.hpp  docker-compose.yml  hi.txt  logs.txt  main.cpp  montecarlo.hpp  output.txt  pool.hpp  readme.md  requirements.txt  test.py  test.txt
docs/: README_8md.html  benchmark_8hpp_source.html  combine__batch__parquets_8py.html  custom.css  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.js  doxygen_crawl.html  gen__perf__parquet__logs_8py.html  index.html  main_8cpp.html  montecarlo_8hpp_source.html  namespacecombine__batch__parquets.html  namespacegen__perf__parquet__logs.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespacescripts.html  parse__perf__metrics_8py.html  parse__perf__metrics_8py.js  pool_8hpp_source.html  run__perf_8sh.html  setup_8py.html  structPoolAllocator-members.html
grafana/: Dockerfile
html/: annotated.html  annotated_dup.js  benchmark_8hpp.html  benchmark_8hpp_source.html  classes.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  main_8cpp.html  md_readme.html  montecarlo_8hpp.html  montecarlo_8hpp.js  montecarlo_8hpp_source.html  navtreedata.js  navtreeindex0.js  pages.html  pool_8hpp.html  pool_8hpp.js  pool_8hpp_source.html  structPoolAllocator-members.html  structPoolAllocator.html  structPoolAllocator.js
latex/: annotated.tex  benchmark_8hpp.tex  files.tex  (+9 more)
(+299 files in other folders)
